fix img alignmet

--- a/src/components/GridList/styles/GridList.scss
+++ b/src/components/GridList/styles/GridList.scss
@@ -34,6 +34,8 @@
                     border:0;
                     position: absolute;
                     bottom: 3px;
+                    left: 0;
+                    right: 0;
                 }
             }            
             .__ixr[desc] {
